--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,19 +2,19 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.flip.MainActivity">
+    tools:context="br.com.flip.MainActivity"
+    >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="@+id/activity_main"
-        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
-        app:layout_constraintRight_toRightOf="@+id/activity_main"
-        app:layout_constraintTop_toTopOf="@+id/activity_main" />
+  <com.flip.connect.widget.ConnectButton
+      android:id="@+id/connectButton"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="FlipConnect"
+      tools:layout_editor_absoluteY="231dp"
+      tools:layout_editor_absoluteX="134dp"
+      />
 
 </android.support.constraint.ConstraintLayout>
