button style done

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context="br.com.flip.MainActivity"
     >
 
-  <com.flip.connect.widget.ConnectButton
+  <com.flip.connect.widget.FlipAuthenticationButton
       android:id="@+id/connectButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />
