moving some .java to others packages and activity with no actionbar

--- a/connect/src/main/res/values/styles.xml
+++ b/connect/src/main/res/values/styles.xml
@@ -5,4 +5,9 @@
     <item name="android:text">@string/login</item>
   </style>
 
+  <style name="NoActionBar" parent="@android:style/Theme.Holo.Light">
+    <item name="android:windowActionBar">false</item>
+    <item name="android:windowNoTitle">true</item>
+  </style>
+
 </resources>
