--- a/connect/src/main/res/layout/activity_login.xml
+++ b/connect/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.flip.connect.view.activities.LoginActivity">
+    tools:context=".presentation.view.activities.LoginActivity">
 
     <WebView
         android:id="@+id/flipWebView"
