--- a/connect/src/main/res/layout/activity_checkout.xml
+++ b/connect/src/main/res/layout/activity_checkout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.view.activities.CheckoutActivity"
+    tools:context=".presentation.checkout.CheckoutActivity"
     >
 
 </android.support.constraint.ConstraintLayout>
