--- a/connect/src/main/res/layout/activity_login.xml
+++ b/connect/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.view.activities.LoginActivity">
+    tools:context=".presentation.login.LoginActivity">
 
     <WebView
         android:id="@+id/flipWebView"
@@ -13,4 +13,12 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone" />
 </RelativeLayout>
