--- a/connect/src/main/res/values/styles.xml
+++ b/connect/src/main/res/values/styles.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-  <style name="FlipButtonTheme" parent="Base.TextAppearance.AppCompat.Widget.Button">
-    <item name="android:text">@string/login</item>
-  </style>
+    <style name="FlipButtonTheme" parent="Base.TextAppearance.AppCompat.Widget.Button">
+        <item name="android:text">@string/login</item>
+    </style>
 
-  <style name="NoActionBar" parent="@android:style/Theme.Holo.Light">
-    <item name="android:windowActionBar">false</item>
-    <item name="android:windowNoTitle">true</item>
-  </style>
+    <style name="NoActionBar" parent="@android:style/Theme.Holo.Light">
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="colorAccent">@color/green_dark</item>
+    </style>
 
 </resources>
