--- a/connect/src/main/res/values/dimens.xml
+++ b/connect/src/main/res/values/dimens.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <dimen name="left_right">18dp</dimen>
-  <dimen name="top_bottom">8dp</dimen>
+    <dimen name="left_right">18dp</dimen>
+    <dimen name="top_bottom">8dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
