--- a/connect/src/main/res/values/styles.xml
+++ b/connect/src/main/res/values/styles.xml
@@ -11,4 +11,9 @@
         <item name="colorAccent">@color/green_dark</item>
     </style>
 
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
