fix crash when token is null, update profile request

--- a/connect/src/main/res/layout/item_public_profile.xml
+++ b/connect/src/main/res/layout/item_public_profile.xml
@@ -32,7 +32,7 @@
         android:layout_below="@id/imgProfile">
 
         <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/editText"
+            android:id="@+id/editButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
