--- a/connect/src/main/res/values/styles.xml
+++ b/connect/src/main/res/values/styles.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorPrimary">@color/green_dark</item>
+        <item name="colorPrimaryDark">@android:color/black</item>
+        <item name="colorAccent">@color/green_dark</item>
+        <item name="colorControlNormal">@android:color/black</item>
+    </style>
+
     <style name="FlipButtonTheme" parent="Base.TextAppearance.AppCompat.Widget.Button">
         <item name="android:text">@string/login</item>
     </style>
