--- a/connect/src/main/res/layout/item_phone.xml
+++ b/connect/src/main/res/layout/item_phone.xml
@@ -4,18 +4,10 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <android.support.v7.widget.AppCompatSpinner
-        android:id="@+id/categoryPhone"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_below="@id/section" />
-
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/categoryPhone"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true">
+        android:id="@+id/phone">
 
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
