--- a/connect/src/main/res/layout/content_edition.xml
+++ b/connect/src/main/res/layout/content_edition.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -22,19 +22,19 @@
             android:layout_height="wrap_content">
 
             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/categoryPersonalData"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:orientation="vertical"
-                android:visibility="gone"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/categoryPublicProfile">
+                            android:id="@+id/categoryPersonalData"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginLeft="8dp"
+                            android:layout_marginRight="8dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="8dp"
+                            android:orientation="vertical"
+                            android:visibility="gone"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/categoryPublicProfile">
 
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/section1"
@@ -42,7 +42,7 @@
                     android:layout_height="20dp"
                     android:gravity="center|start"
                     android:text="DADOS PESSOAIS"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/birthDate"
@@ -58,16 +58,16 @@
                         android:layout_height="wrap_content"
                         android:inputType="numberSigned"
                         android:maxLength="10"
-                        android:maxLines="1" />
+                        android:maxLines="1"/>
                 </android.support.design.widget.TextInputLayout>
 
                 <TextView
+                    android:id="@+id/genderTitle"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/genderTitle"
-                    android:textSize="12sp"
                     android:layout_below="@+id/birthDate"
-                    android:text="Gênero:"/>
+                    android:text="Gênero:"
+                    android:textSize="12sp"/>
 
                 <Spinner
                     android:id="@+id/gender"
@@ -87,23 +87,40 @@
 
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"/>
                 </android.support.design.widget.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/country"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/countryTitle"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/dependents"
                     android:layout_marginBottom="8dp"
-                    android:hint="Nacionalidade">
+                    android:text="Nacionalidade:"
+                    android:textSize="12sp"/>
+
+                <Spinner
+                    android:id="@+id/country"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/countryTitle"
+                    android:layout_marginBottom="8dp"
+                    />
+
+                <!--<android.support.design.widget.TextInputLayout-->
+                <!--android:id="@+id/country"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/dependents"-->
+                <!--android:layout_marginBottom="8dp"-->
+                <!--android:hint="Nacionalidade">-->
 
 
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/textInputEditText"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-                </android.support.design.widget.TextInputLayout>
+                <!--<android.support.design.widget.TextInputEditText-->
+                <!--android:id="@+id/textInputEditText"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content" />-->
+                <!--</android.support.design.widget.TextInputLayout>-->
             </RelativeLayout>
 
             <RelativeLayout
@@ -127,13 +144,13 @@
                     android:layout_marginBottom="8dp"
                     android:gravity="center|start"
                     android:text="EMAILS"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/emails"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/section2" />
+                    android:layout_below="@+id/section2"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -155,7 +172,7 @@
                     android:layout_marginBottom="8dp"
                     android:gravity="center|start"
                     android:text="TELEFONES"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/phones"
@@ -188,7 +205,7 @@
                     android:layout_height="20dp"
                     android:gravity="center|start"
                     android:text="DADOS PÚBLICOS"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
 
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/imgProfile"
@@ -198,7 +215,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_gravity="center"
                     android:layout_marginBottom="8dp"
-                    android:layout_marginTop="8dp" />
+                    android:layout_marginTop="8dp"/>
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/publicName"
@@ -215,7 +232,7 @@
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
                         android:layout_below="@+id/imgProfile"
-                        android:gravity="center|start" />
+                        android:gravity="center|start"/>
                 </android.support.design.widget.TextInputLayout>
 
             </RelativeLayout>
